packages/markdown-core/elements/heading_scanners.c
/* Generated by re2c 4.6 */
#include "heading_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */






bufsize_t scan_atx_heading_start(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0, 128,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		128,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych == '#') goto yy2;
	++p;
yy1:
	{ return 0; }
yy2:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy1;
		if (yych <= '\n') goto yy5;
		goto yy1;
	} else {
		if (yych <= '\r') goto yy5;
		if (yych == '#') goto yy6;
		goto yy1;
	}
yy3:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
yy4:
	{ return (bufsize_t)(p - start); }
yy5:
	++p;
	goto yy4;
yy6:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy7;
		if (yych <= '\n') goto yy5;
	} else {
		if (yych <= '\r') goto yy5;
		if (yych == '#') goto yy8;
	}
yy7:
	p = marker;
	goto yy1;
yy8:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy7;
		if (yych <= '\n') goto yy5;
		goto yy7;
	} else {
		if (yych <= '\r') goto yy5;
		if (yych != '#') goto yy7;
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy7;
		if (yych <= '\n') goto yy5;
		goto yy7;
	} else {
		if (yych <= '\r') goto yy5;
		if (yych != '#') goto yy7;
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy7;
		if (yych <= '\n') goto yy5;
		goto yy7;
	} else {
		if (yych <= '\r') goto yy5;
		if (yych != '#') goto yy7;
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy3;
	if (yych <= 0x08) goto yy7;
	if (yych <= '\n') goto yy5;
	if (yych == '\r') goto yy5;
	goto yy7;
}

}

bufsize_t scan_setext_heading_line(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,  32,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		 32,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,  64,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0, 128,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych == '-') goto yy11;
	if (yych == '=') goto yy12;
	++p;
yy10:
	{ return 0; }
yy11:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy17;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy10;
		if (yych <= '\n') goto yy14;
		goto yy10;
	} else {
		if (yych <= '\r') goto yy14;
		if (yych == ' ') goto yy14;
		goto yy10;
	}
yy12:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy21;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy10;
		if (yych <= '\n') goto yy19;
		goto yy10;
	} else {
		if (yych <= '\r') goto yy19;
		if (yych == ' ') goto yy19;
		goto yy10;
	}
yy13:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy14:
	if (yybm[0+yych] & 32) goto yy13;
	if (yych <= 0x08) goto yy15;
	if (yych <= '\n') goto yy16;
	if (yych == '\r') goto yy16;
yy15:
	p = marker;
	goto yy10;
yy16:
	++p;
	{ return 2; }
yy17:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy13;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy15;
		if (yych <= '\n') goto yy16;
		goto yy15;
	} else {
		if (yych <= '\r') goto yy16;
		if (yych == '-') goto yy17;
		goto yy15;
	}
yy18:
	++p;
	yych = (p < remaining ? input[p] : 0);
yy19:
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy15;
		if (yych <= '\t') goto yy18;
		if (yych >= '\v') goto yy15;
	} else {
		if (yych <= '\r') goto yy20;
		if (yych == ' ') goto yy18;
		goto yy15;
	}
yy20:
	++p;
	{ return 1; }
yy21:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy21;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy15;
		if (yych <= '\t') goto yy18;
		if (yych <= '\n') goto yy20;
		goto yy15;
	} else {
		if (yych <= '\r') goto yy20;
		if (yych == ' ') goto yy18;
		goto yy15;
	}
}

}
